# BPMToyProblems

./: .gitignore  pyproject.toml
src/: __init__.py  prompting.py  solve_toy_problem.py
src/action/: __init__.py  base.py  qwen_action.py  qwen_omniparser.py
src/action/omniparser/: __init__.py  inference.py
src/action/omniparser/util/: utils.py
src/models/: __init__.py  base.py  intern_vl_model.py  models.py  nvl_model.py  qwen_vl_model.py  text_model.py  utils.py  vision_model.py
src/planner/: __init__.py  base.py  qwen_planner.py
src/prompts/: __init__.py  action_prompts.py  omniparser.py  planner_prompts.py  recovery_prompts.py
src/utils/: __init__.py  images.py  logging_utils.py  uitars_coordinates_processing.py
