[project]
name = "toyproblems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "autoawq>=0.2.7.post3",
    "jax>=0.6.0",
    "langchain>=0.3.24",
    "openai>=1.76.2",
    "qwen-vl-utils>=0.0.11",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
