[project]
name = "toyproblems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "autoawq>=0.2.7.post3",
    "colorama>=0.4.6",
    "jax>=0.6.0",
    "langchain>=0.3.24",
    "matplotlib[debug]>=3.10.3",
    "openai>=1.76.2",
    "polars>=1.29.0",
    "qwen-vl-utils>=0.0.11",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.50.0",
]

[project.optional-dependencies]
omniparser = [
    "boto3>=1.38.12",
    "dill>=0.3.8",
    "easyocr>=1.7.2",
    "einops==0.8.0",
    "groq>=0.24.0",
    "jsonschema>=4.23.0",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "screeninfo>=0.8.1",
    "streamlit>=1.45.0",
    "supervision==0.18.0",
    "timm>=1.0.15",
    "uiautomation>=2.0.28",
    "ultralytics==8.3.70",
]

[tool.uv.sources]
torch = [
  { index = "torch-gpu", marker = "platform_system != 'darwin'"},
]
torchvision = [
  { index = "torch-gpu", marker = "platform_system != 'darwin'"},
]
markupsafe = [
  { index = "simple"},
]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "8ee50537fe7613b87881cd043a85971c85e99519" }

[tool.uv]
index-strategy = 'unsafe-best-match'
extra-index-url = [
  'https://pypi.org/simple',
  'https://download.pytorch.org/whl/cu118',
]

[[tool.uv.index]]
name = "simple"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu118"

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
]
